# EonHub

./: data.csv  data_summary.csv  requirements.txt
CGX GAME/: CGXAI.cpp  CGXAI.h  CGX_GAME.pro  EoniaAI.cpp  EoniaAI.h  EoniaAI.py  GUI.py  GameInterface.py  KnowledgeBase.db  Main.cpp  MainWindow.cpp  MainWindow.h  Makefile  Makefile.Debug  Makefile.Release  NaturalDialog.cpp  NaturalDialog.h  build_game.py  eonnodgame.spec  factorial.py  isPalindrome.groovy  mainwindow.ui.xml  security_checks.py  securityinput_sanitizer.py  tasks.json  test_EoniaAI.py  unittest.TestCase.py
CGX GAME/security/: security_README.md  securitydata_encryption.py  securitysecurity_log.py
Camera/: Canvas.html  Conceptual.py  GOLD.py  Matplotlib.py  OpenCV.py  Processing.cpp  Qiskit.py  create_model.py  effects_module.py  main.py  quantum_module.py  ui.qml.py
gemini-generate-1/: GUI.py  create_model.py  emotional_resonance.keras  pyproject.toml  setup.py
